--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,20 +1,29 @@
 # cancel the key bindings for C-b
 unbind C-b
+
 # set prefix key
 set -g prefix C-b
+
 # reduce delay of key stroke
 set -sg escape-time 1
+
 # begin index of window from 1
 set -g base-index 1
+
 # begin index of pane from 1
 setw -g pane-base-index 1
+
 # reload tmux config file
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
 bind C-b send-prefix
+
 # split the pane with a pipe in a vertical
 bind v split-window -h
+
 # split the pane with a pipe in a transverse
 bind w split-window -v
+
 # move between the panes in the key bindings for vim
 bind h select-pane -L
 bind j select-pane -D
@@ -22,32 +31,41 @@ bind k select-pane -U
 bind l select-pane -R
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
+
 # resize the pane in the key bindings for vim
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
 # enable the mouse operation
 setw -g mouse
+
 # use a 256-color terminal
 set -g default-terminal "screen-256color"
+
 # set the color of the status bar
 set -g status-fg white
 set -g status-bg black
+
 # set the color of window list
 setw -g window-status-fg cyan
 setw -g window-status-bg default
 setw -g window-status-attr dim
+
 # hightlight the active window
 setw -g window-status-current-fg white
 setw -g window-status-current-bg blue
 setw -g window-status-current-attr bright
+
 # set the color of the pane border
 set -g pane-border-fg green
 set -g pane-border-bg black
+
 # hightlight the active pane
 set -g pane-active-border-fg white
 set -g pane-active-border-bg yellow
+
 # set the color of command line
 set -g message-fg white
 set -g message-bg black
@@ -60,7 +78,8 @@ set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
 ## set the right panel
 set -g status-right-length 120
 # set -g status-right '#[fg=cyan][%Y-%m-%d %H:%M]'
-set-option -g status-right '#[fg=cyan][%Y-%m-%d %H:%M:%S]'
+set-option -g status-right '#[fg=yellow]#(localip) #[fg=green]#(wifi) #[fg=white]#(showbattery) #[fg=cyan][%Y-%m-%d %H:%M:%S]'
+# set-option -g status-right '#[fg=cyan][%Y-%m-%d %H:%M:%S]'
 ## set the refresh interval (default 15 seconds)
 set -g status-interval 1 
 ## center shifting the position of the window list
@@ -70,18 +89,22 @@ setw -g monitor-activity on
 set -g visual-activity on
 ## display the status bar at the top
 set -g status-position top
+
 # set the copy mode
 ## use the key bindings for vi
 setw -g mode-keys vi
 ## enable clipboard sharing
-# set-option -g default-command "reattach-to-user-namespace -l zsh"
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
 ## set the operation of the copy mode to vim-style
-# bind-key -t vi-copy v begin-selection
-# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-# unbind -t vi-copy Enter
-# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -t vi-copy v begin-selection
+#unbind -t vi-copy Enter
+#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # https://qiita.com/jyotti/items/5383d909f7307762fefa
-set-option -g default-command "exec reattach-to-user-namespace -l $SHELL"
+# https://qiita.com/simeji/items/35037bb2a240e4e72cec
+# set-option -g default-command "exec reattach-to-user-namespace -l $SHELL"
 bind-key    -T copy-mode-vi v     send-keys -X begin-selection
 bind-key    -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+# bind-key    -T vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# メモ：wifi これは、Wi-Fi の SSID を取得するスクリプトです。ここからダウンロードし、実行権限（chmod 755 wifi）をつけてパスの通ったディレクトリ（例：/usr/local/bin）にインストールしてください。※現在、Mac のみ対応
